# Customer-Support-AI-Chatbot

./: .gitignore  README.md  api.py  app.py  main.py  pyproject.toml  system_prompt.txt  tools.py
chroma_langchain_db/a87e15f2-0a01-403c-832a-d7389c810e36/: index_metadata.pickle
docs/: order_data_50.csv
sample-data/: faq.json  products.csv
